Bug 158320 - No more font live preview (on hovering) in Calc
Summary: No more font live preview (on hovering) in Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 i...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Font-Preview
  Show dependency treegraph
 
Reported: 2023-11-22 14:55 UTC by stragu
Modified: 2024-09-12 06:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-11-22 14:55:35 UTC
Hovering over a font in the sidebar or toolbar combobox in Calc does not "live preview" it on canvas anymore.

Reporting this regression as I could not see it tracked elsewhere and I understand it was not by design.

Bibisected with linux-64-7.0 repository to build commit [375b2a52d02794c668e0e6a4328da042fd973ab1] which points to core commit:

commit d7a271c08fe072b35cf759aef417bbe23ffc96b4
author	Caolán McNamara Fri Apr 17 20:52:03 2020 +0100
committer	Caolán McNamara Mon Apr 20 19:45:04 2020 +0200
effectively unused mnStyle member
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92490

Caolán, that wasn't planned, right?

Heiko, copying you in because of the previous discussions about live-previewing (bug 37048 notably) and its relation to design guidelines.
Comment 1 Commit Notification 2023-12-12 12:59:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30d3a5743961274d360e683eccd2756257ed5e7a

tdf#158320 restore Live Preview for font hovering

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2023-12-12 13:00:37 UTC
That seems to do what it used to do before.
Comment 3 Commit Notification 2023-12-12 20:28:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9bb8156f40e052a132e85b2c2a9dd9521ecf273f

tdf#158320 restore Live Preview for font hovering

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 stragu 2023-12-15 08:52:50 UTC
Thanks Caolán! Fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fdc87dd56548622e13353b4cf9864232ee0110fb
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I thought it was worth mentioning in the release notes: https://wiki.documentfoundation.org/index.php?title=ReleaseNotes%2F24.2&type=revision&diff=714942&oldid=714941
Comment 5 BogdanB 2023-12-15 09:07:31 UTC
Stephane, can you add a screenshot to see the live preview? I don't see in the last master build by myself yesterday.
Comment 6 Manu 2024-09-12 06:38:44 UTC
(In reply to Commit Notification from comment #3)
> Caolán McNamara committed a patch related to this issue.
> It has been pushed to "libreoffice-24-2":
> tdf#158320 restore Live Preview for font hovering
> It will be available in 24.2.0.0.beta2.
> 
> Affected users are encouraged to test the fix and report feedback.

Hello, I am among the "Affected users" by this fix.
I have created the bug 162546 - UI: Lineheight is changing during font selection.
It is certainly beautiful to have "live" function. Yes it is, thank you for the function! But in this case, there are others consequences and it results in "live" delays...
Moreover, after this action, the already declared bug (161898 UI: bug activated by font box enforces a repeated recalculation of lineheight of all lines) is activated and make the moving between cells very slow (recalculation of lineheight of all the sheet with status line blinking).
And if you try again the font selection on a column, then the delay is bigger when we move between the different fonts.
Is this recalculation really needed before the new font is validated???
and when we move from cell to cell???

In my opinion, it would be better to have a new parameter in the options (with or without live preview during selection in the font combolist). At least, it can stop any unknown problem and delays generated in long and complex documents.
Nothing is perfect, but thanks for your work!