tdf#158320 restore Live Preview for font hovering

a) announce Preview when a 'selected' font preview is requested
b) move EndPreview to when the dropdown popups down, rather than listen
to ESC

Change-Id: I68916769150c23c0ec18aae084cdf3cafb7352a4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160609
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 30d3a5743961274d360e683eccd2756257ed5e7a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160588
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>